Announcements unit tests